--- a/Django/item_tracker/tracker/templates/base.html
+++ b/Django/item_tracker/tracker/templates/base.html
@@ -102,6 +102,8 @@
 
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+        <!-- jQuery core JS-->
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
         <!-- Core theme JS-->
         <script src="{% static 'js/scripts.js' %}"></script>
         {% block js %}{% endblock %}
